[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://graphic/player1.png" type="Texture" id=2]
[ext_resource path="res://graphic/player2.png" type="Texture" id=3]
[ext_resource path="res://graphic/P1.png" type="Texture" id=4]
[ext_resource path="res://graphic/P2.png" type="Texture" id=5]
[ext_resource path="res://graphic/playerGreen.png" type="Texture" id=6]
[ext_resource path="res://graphic/playerPink.png" type="Texture" id=7]
[ext_resource path="res://graphic/healthBar.png" type="Texture" id=8]
[ext_resource path="res://graphic/healthBarBorder.png" type="Texture" id=9]
[ext_resource path="res://Audio/Blaster2.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/Damage.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/coin-upaif-14631.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/heal-up-39285.wav" type="AudioStream" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 2
script = ExtResource( 1 )

[node name="OrangeShip" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="PurpleShip" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="GreenShip" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="PinkShip" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -10, -60 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="BigCooldownTimer" type="Timer" parent="."]

[node name="P1" type="TextureRect" parent="."]
margin_left = -40.0
margin_top = 45.0
margin_right = 120.0
margin_bottom = 205.0
texture = ExtResource( 4 )

[node name="P2" type="TextureRect" parent="."]
margin_left = -40.0
margin_top = 45.0
margin_right = 120.0
margin_bottom = 205.0
texture = ExtResource( 5 )

[node name="doubleshot1" type="Position2D" parent="."]
position = Vector2( 10, -60 )

[node name="doubleshot2" type="Position2D" parent="."]
position = Vector2( -30, -60 )

[node name="AbilityTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="AbilityTimer2" type="Timer" parent="."]
wait_time = 10.0

[node name="healthBar" type="TextureProgress" parent="."]
margin_left = -40.0
margin_top = 15.0
margin_right = 40.0
margin_bottom = 95.0
texture_progress = ExtResource( 8 )

[node name="healthBarBorder" type="TextureRect" parent="."]
margin_left = -45.0
margin_top = 15.0
margin_right = 45.0
margin_bottom = 95.0
texture = ExtResource( 9 )

[node name="DamageSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="PlayerBlasterSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -8.0

[node name="PowerUpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="HealSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[connection signal="timeout" from="CooldownTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BigCooldownTimer" to="." method="_on_BigCooldownTimer_timeout"]
[connection signal="timeout" from="AbilityTimer" to="." method="_on_AbilityTimer_timeout"]
[connection signal="timeout" from="AbilityTimer2" to="." method="_on_AbilityTimer2_timeout"]
